syntax = "proto3";

package ru.leti.wise.task.graph;

import "graph.proto";
import "google/protobuf/empty.proto";

service GraphService {
  rpc IsOwnerGraph(IsOwnerGraphRequest) returns (IsOwnerGraphResponse);
  rpc getGraphById (GetGraphByIdRequest) returns (GetGraphByIdResponse);
  rpc createGraph (CreateGraphRequest) returns (CreateGraphResponse);
  rpc generateRandomGraph (GenerateGraphRequest) returns (GenerateGraphResponse);
  rpc getGraphLibrary (google.protobuf.Empty) returns (GetGraphLibraryResponse);
  rpc removeGraph (RemoveGraphRequest) returns (RemoveGraphResponse);
}


message IsOwnerGraphRequest{
  string user_id = 1;
  string graph_id = 2;
}

message IsOwnerGraphResponse{
  bool result = 1;
}

message GenerateGraphRequest {
  int32 vertexCount = 1;
  int32 edgeCount = 2;
  bool isDirect = 3;
  bool isSaved = 4;
}

message RemoveGraphRequest {
  string id = 1;
}

message RemoveGraphResponse {
  string id = 1;
}

message GetGraphLibraryResponse {
  repeated Graph graphList = 1;
}

message GenerateGraphResponse {
  Graph graph = 1;
}

message CreateGraphResponse {
  Graph graph = 1;
}

message CreateGraphRequest {
  Graph graph = 1;
}

message GetGraphByIdResponse {
  Graph graph = 1;
}

message GetGraphByIdRequest {
  string id = 1;
}